# cap

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  crates.js  flake.nix  index.html  search-index.js  settings.html  shell.nix  source-files.js
.cargo-husky/hooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: build.yml  nightly.yml  slowtests.yml
benches/: batch_verification.rs  freeze.rs  mint.rs  transfer.rs
implementors/ark_serialize/: trait.CanonicalDeserialize.js  trait.CanonicalSerialize.js
implementors/commit/: trait.Committable.js
jf_aap/: all.html  enum.TransactionNote.html  enum.TransactionVerifyingKey.html  fn.derive_txns_fee_record.html  fn.prepare_txns_fee_record.html  fn.sign_receiver_memos.html  fn.txn_batch_verify.html  index.html  sidebar-items.js  type.AccMemberWitness.html  type.BaseField.html  type.CurveParam.html  type.KeyPair.html  type.MerkleCommitment.html  type.MerkleFrontier.html  type.MerkleLeaf.html  type.MerkleLeafProof.html  type.MerklePath.html  type.MerkleTree.html  type.NodeValue.html  type.PairingEngine.html  type.ScalarField.html  type.Signature.html  type.VerKey.html  type.VerifyingKey.html
jf_aap/bench_utils/: constant.BATCH_VERIF.html  constant.GEN.html  constant.NUM_INPUTS_RANGE.html  constant.NUM_OUTPUTS_RANGE.html  constant.TREE_DEPTH.html  constant.VERIFY.html  fn.compute_sizes.html  fn.compute_title_batch.html  fn.compute_title_simple.html  fn.full_path.html  fn.get_builder_freeze.html  fn.get_builder_mint.html  fn.get_builder_transfer.html  fn.get_key_pairs.html  fn.save_result_to_file_batch.html  fn.save_result_to_file_simple.html  fn.save_results_to_file.html  index.html
jf_aap/constants/: constant.ATTRS_LEN.html  constant.AUDIT_DATA_LEN.html  constant.BLS_SCALAR_BIT_CAPACITY.html  constant.BLS_SCALAR_BIT_LEN.html  constant.BLS_SCALAR_REPR_BYTE_LEN.html  constant.DOM_SEP_DOMESTIC_ASSET.html  constant.DOM_SEP_FOREIGN_ASSET.html  constant.DUMMY_ASSET_CODE.html  constant.MAX_TIMESTAMP_LEN.html  constant.NATIVE_ASSET_CODE.html  constant.PER_ATTR_BYTE_CAPACITY.html  constant.REVEAL_MAP_LEN.html  index.html  sidebar-items.js
jf_aap/errors/: enum.DeserializationError.html  enum.TxnApiError.html  index.html
jf_aap/freeze/: index.html  sidebar-items.js  struct.FreezeAuxInfo.html  struct.FreezeNote.html  struct.FreezeNoteInput.html
jf_aap/keys/: index.html  struct.AuditorKeyPair.html  struct.AuditorPubKey.html  struct.CredIssuerKeyPair.html  struct.CredIssuerPubKey.html  struct.FreezerKeyPair.html  struct.FreezerPubKey.html  struct.UserKeyPair.html  struct.UserPubKey.html  type.UserAddress.html
jf_aap/mint/: index.html  struct.MintAuxInfo.html  struct.MintNote.html
jf_aap/parameters/: fn.load_freeze_proving_key.html  fn.load_freeze_verifying_key.html  fn.load_mint_proving_key.html  fn.load_mint_verifying_key.html  fn.load_transfer_proving_key.html  fn.load_transfer_verifying_key.html  fn.load_universal_parameter.html  fn.store_freeze_proving_key.html  fn.store_freeze_verifying_key.html  fn.store_mint_proving_key.html  fn.store_mint_verifying_key.html  fn.store_transfer_proving_key.html  fn.store_transfer_verifying_key.html  fn.store_universal_parameter_for_demo.html  index.html  sidebar-items.js
jf_aap/proof/: fn.load_srs.html  fn.universal_setup.html  index.html  type.UniversalParam.html
jf_aap/structs/: enum.FreezeFlag.html  enum.NoteType.html  index.html  sidebar-items.js  struct.AssetCode.html  struct.AssetCodeSeed.html  struct.AssetDefinition.html  struct.AssetPolicy.html  struct.AuditData.html  struct.AuditMemo.html  struct.BlindFactor.html  struct.ExpirableCredential.html  struct.FeeInput.html  struct.IdentityAttribute.html  struct.InternalAssetCode.html  struct.Nullifier.html  struct.ReceiverMemo.html  struct.RecordCommitment.html  struct.RecordOpening.html  struct.RevealMap.html  struct.TxnFeeInfo.html
jf_aap/transfer/: index.html  struct.AuxInfo.html  struct.TransferNote.html  struct.TransferNoteInput.html
jf_aap/types/: type.AccMemberWitness.html  type.BaseField.html  type.CurveParam.html  type.KeyPair.html  type.MerkleCommitment.html  type.MerkleFrontier.html  type.MerkleLeaf.html  type.MerkleLeafProof.html  type.MerklePath.html  type.MerkleTree.html  type.NodeValue.html  type.PairingEngine.html  type.ScalarField.html  type.Signature.html  type.VerKey.html  type.VerifyingKey.html
jf_aap/utils/: fn.compute_universal_param_size.html  index.html
jf_cap/: all.html  enum.TransactionNote.html  enum.TransactionVerifyingKey.html  fn.calculate_fee.html  fn.derive_txns_fee_record.html  fn.derive_txns_fee_records.html  fn.prepare_txns_fee_record.html  fn.sign_receiver_memos.html  fn.txn_batch_verify.html  index.html  sidebar-items.js  type.AccMemberWitness.html  type.BaseField.html  type.CurveParam.html  type.KeyPair.html  type.MerkleCommitment.html  type.MerkleFrontier.html  type.MerkleLeaf.html  type.MerkleLeafProof.html  type.MerklePath.html  type.MerkleTree.html  type.NodeValue.html  type.PairingEngine.html  type.ScalarField.html  type.Signature.html  type.VerKey.html  type.VerifyingKey.html
jf_cap/bench_utils/: constant.BATCH_VERIF.html  constant.GEN.html  constant.NUM_INPUTS_RANGE.html  constant.NUM_OUTPUTS_RANGE.html  constant.TREE_DEPTH.html  constant.VERIFY.html  fn.compute_sizes.html  fn.compute_title_batch.html  fn.compute_title_simple.html  fn.full_path.html  fn.get_builder_freeze.html  fn.get_builder_mint.html  fn.get_builder_transfer.html  fn.get_key_pairs.html  fn.save_result_to_file_batch.html  fn.save_result_to_file_simple.html  fn.save_results_to_file.html  index.html  sidebar-items.js
jf_cap/config/: index.html  sidebar-items.js  struct.Config.html  trait.CapConfig.html
jf_cap/constants/: constant.ATTRS_LEN.html  constant.AUDIT_DATA_LEN.html  constant.BLS_SCALAR_BIT_CAPACITY.html  (+12 more)
scripts/: run_benchmarks.m4  run_benchmarks.sh  run_tests.sh  run_tests_full.sh  test_coverage.sh
src/: config.rs  constants.rs  errors.rs  freeze.rs  keys.rs  lib.rs  mint.rs  parameters.rs  prelude.rs  structs.rs  testing_apis.rs  transfer.rs  types.rs
tests/: examples.rs
(+267 files in other folders)
