[package]
name = "jf-cap"
description = "CAP: configurable asset policy"
version = "0.0.4"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "^1.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", optional = true }
ark-bls12-381 = { version = "0.4.0", optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
ark-ec = "0.4.0"
ark-ed-on-bls12-377 = { version = "0.4.0", optional = true }
ark-ed-on-bls12-381 = { version = "0.4.0", optional = true }
ark-ed-on-bn254 = { version = "0.4.0", optional = true }
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
bincode = { version = "1.3.3", default-features = false }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
csv = { version = "1.1.6", optional = true }
derivative = { version = "2", features = ["use_core"] }
derive_more = "0.99.17"
displaydoc = { version = "0.2.3", default-features = false }
hex-literal = "^0.3"
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish.git", branch = "wasm" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish.git", branch = "wasm" }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish.git", branch = "wasm" }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish.git", branch = "wasm" }
num_cpus = { version = "1.13.0", optional = true }
primitive-types = { version = "0.11", default-features = false }
rand = { version = "0.8.4", default-features = false, features = [ "alloc" ] }
rand_chacha = { version = "0.3.1", default-features = false }
rayon = { version = "1.5.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0.61", optional = true }
sha2 = { version = "0.9.5", default-features = false }
sha3 = { version = "^0.10", default-features = false }
structopt = {version = "0.3.22", optional = true }

[dev-dependencies]
criterion = "0.3.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bin]]
name = "gen-params"
path = "src/bin/gen-parameters.rs"
dependencies = ["structopt"]

# Benchmarks
[[bench]]
name = "transfer"
harness = false

[[bench]]
name = "mint"
harness = false

[[bench]]
name = "freeze"
harness = false

[[bench]]
name = "batch_verification"
harness = false

[features]
default = ["bn254"]
bls12_381 = ["ark-bls12-381", "ark-ed-on-bls12-381"]
bls12_377 = ["ark-bls12-377", "ark-ed-on-bls12-377"]
bn254 = ["ark-bn254", "ark-ed-on-bn254"]
std = ["ark-std/std"]
# exposing apis for testing purpose
test_apis = []
dev = ["test_apis", "dep:csv", "dep:serde_json"]
